nginx-ingress/project1/blue-nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx-blue
  name: nginx-deploy-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-blue
  template:
    metadata:
      labels:
        run: nginx-blue
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx-blue 
        volumeMounts: 
        - name: webdata
          mountPath: "/usr/share/nginx/html"
