nginx-ingress/project1/main-nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx-main
  name: nginx-deploy-main
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx-main
  template:
    metadata:
      labels:
        run: nginx-main
    spec:
      containers:
      - image: nginx
        name: nginx-main
