nginx-ingress/project1/main-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx-green
  name: nginx-deploy-green
spec:
  replicas: 3
  selector:
    matchLabels:
      run: nginx-green
  template:
    metadata:
      labels:
        run: nginx-green
    spec:
      volumes:
      - name: webdata
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx-main
        volumeMounts: 
        - name: webdata
          mountPath: "/usr/share/nginx/html"
